# dandelion

./: .dockerignore  .gitignore  .hadolint.yaml  .rustfmt.toml  AGENTS.md  CHANGELOG.md  Dockerfile  LICENCE  README.md  appcast.xml  snapcraft.yaml
.cspell/: custom-dictionary-workspace.txt
.github/: dependabot.yml
.github/workflows/: app_release.yml  ci.yml  dependabot.yml  docker_release.yml  release.yml
.trunk/: trunk.yaml
Extension/: AppProxyProvider.swift
Specht2/: ContentView.swift  NeManager.swift  Specht2App.swift
Specht2.xcodeproj/: project.pbxproj
Specht2.xcodeproj/xcshareddata/xcschemes/: Specht2.xcscheme
Specht2Tests/: Specht2Tests.swift
Specht2UITests/: Specht2UITests.swift  Specht2UITestsLaunchTests.swift
app/: .gitignore  .swiftlint.yml  Gemfile  build_core.sh  package.json  pnpm-lock.yaml  uninstall.sh
app/LaunchHelper/: main.swift
app/ProxyHelperCommon/: Constants.swift  Endpoint.swift  FfiError.swift  ProxyHelperInterface.swift  ServiceInterface.swift  XpcError.swift
app/Specht2/: Alert.swift  AppDelegate.swift  Autostart.swift  ConfigManager.swift  ContentView.swift  Defaults.swift  Info.plist  Server.swift  Specht2-Bridging-Header.h  Specht2.entitlements  TaskBarController.swift  Update.swift  main.swift
app/Specht2.xcodeproj/: project.pbxproj
app/Specht2/Manager/: ConfigManager.swift
app/Specht2/Server/: ConfigManager.swift  Proxy.swift  Server.swift  Service.swift
app/Specht2/SupportFeatures/: Autostart.swift  Log.swift  Update.swift
app/Specht2/Utilities/: String+LocalizedError.swift
app/Specht2UITests/: Specht2UITests.swift
app/fastlane/: Appfile  Fastfile  Matchfile  Pluginfile  README.md
app/me.zhuhaow.Specht2.proxy-helper/: Info.plist  NSXPCConnection+AuditToken.h  ProxyHelper.swift  Server.swift  XpcServer.swift  bridge-header.h  launchd.plist  main.swift
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs  main.rs
core/: Cargo.toml  Cross.toml  about.toml  cbindgen.toml
core copy/: Cargo.toml  about.hbs  about.toml
core copy/config/: rule_without_geo.ron
core copy/cross/: Dockerfile-arm64
core copy/specht-core/: Cargo.toml
core copy/specht-core/src/: geoip.rs  lib.rs
core copy/specht-ffi/: Cargo.toml
core copy/specht-ffi/src/: lib.rs
core copy/specht-server/: Cargo.toml
core copy/specht-server/src/: lib.rs  privilege.rs
core/config/: local.ron  multiple_acceptors.ron  remote.ron  rule_with_geo.ron  rule_without_geo.ron  wrong_rule.ron
core/dandelion-cli/: Cargo.toml
core/dandelion-config/: Cargo.toml
core/dandelion-config/src/: lib.rs  rune.rs
core/dandelion-config/src/engine/: connect.rs  geoip.rs  iplist.rs  mod.rs  resolver.rs
core/dandelion-core/: Cargo.toml
core/dandelion-core/src/: io.rs
core/dandelion-core/src/acceptor/: http.rs  mod.rs  socks5.rs
core/dandelion-core/src/connector/: block.rs  http.rs  quic.rs  simplex.rs  socks5.rs
core/dandelion-core/src/quic/: client.rs  mod.rs
core/dandelion-core/src/resolver/: hickory.rs  mod.rs
core/dandelion-core/src/simplex/: client.rs  io.rs  mod.rs  server.rs
core/fixtures/: asn-country.mmdb
core/specht-cli/: Cargo.toml
core/specht-config/: Cargo.toml
core/specht-config/src/: acceptor.rs  connector.rs  engine.rs  geoip.rs  instance.rs  lib.rs  rune.rs
core/specht-config/src/connector/: mod.rs  resolver.rs
core/specht-config/src/engine/: connect.rs  geoip.rs  iplist.rs  mod.rs  resolver.rs
core/specht-core/: Cargo.toml
core/specht-core/specht-core.xcodeproj/: project.pbxproj
core/specht-core/specht-core.xcodeproj/xcuserdata/zhuhao.xcuserdatad/xcschemes/: xcschememanagement.plist
core/specht-core/src/: endpoint.rs  geoip.rs  io.rs  lib.rs
core/specht-core/src/acceptor/: http.rs  mod.rs  quic.rs  socks5.rs
core/specht-core/src/acceptor/simplex/: client.rs  io.rs  mod.rs  server.rs
core/specht-core/src/connector/: block.rs  http.rs  mod.rs  pool.rs  quic.rs  simplex.rs  socks5.rs  speed.rs  tcp.rs  tls.rs
core/specht-core/src/connector/rule/: dns_fail.rs  domain.rs  geoip.rs  ip.rs  mod.rs
core/specht-core/src/quic/: client.rs  mod.rs  server.rs
core/specht-core/src/resolver/: mod.rs  system.rs  trust.rs  udp.rs
core/specht-core/src/server/: config.rs
core/specht-core/src/simplex/: client.rs  io.rs  mod.rs  server.rs
core/specht-core/src/tun/: acceptor.rs  dns.rs  mod.rs  stack_unix.rs  translator.rs
core/specht-core/src/utils/: expiring_hash.rs  mod.rs
core/specht-ffi/: Cargo.toml  cbindgen.toml
core/specht-ffi/specht-ffi.xcodeproj/: project.pbxproj
core/specht-ffi/src/: binding.rs
core/specht-server/: Cargo.toml
core/specht-server/src/: config.rs  geoip.rs  lib.rs  privilege.rs
core/specht2_core.xcodeproj/: project.pbxproj
core/specht2_core.xcodeproj/xcuserdata/zhuhao.xcuserdatad/xcschemes/: xcschememanagement.plist
core/src/: binding.rs  endpoint.rs  geoip.rs  lib.rs  main.rs  server.rs  tunnel.rs
core/src/acceptor/: http.rs  mod.rs  simplex.rs  socks5.rs
core/src/config/: rune.rs
core/src/config/engine/: connect.rs  geoip.rs  iplist.rs  mod.rs  resolver.rs  testing.rs  tun.rs
core/src/connector/: block.rs  boxed.rs  http.rs  mod.rs  pool.rs  simplex.rs  socks5.rs  speed.rs  tcp.rs  tcp_pool.rs  tls.rs
core/src/connector/rule/: all.rs  dns_fail.rs  domain.rs  geoip.rs  ip.rs  mod.rs
core/src/core/: mod.rs
core/src/core/acceptor/: http.rs  mod.rs  socks5.rs
core/src/core/connector/: block.rs  http.rs  quic.rs  simplex.rs  socks5.rs  speed.rs  tcp.rs  tls.rs
core/src/core/quic/: client.rs
core/src/core/resolver/: hickory.rs  mod.rs  system.rs
core/src/core/simplex/: client.rs  io.rs  server.rs
core/src/core/tun/: device.rs  mod.rs  resolver.rs
core/src/resolver/: mod.rs  system.rs  udp.rs
core/src/server/: config.rs  geoip.rs  mod.rs  privilege.rs
core/src/simplex/: client.rs  io.rs  mod.rs  server.rs
core/src/tun/: acceptor.rs  codec.rs  device.rs  device_unix.rs  dns.rs  mod.rs  route.rs  stack.rs  stack_unix.rs  stack_win.rs  translator.rs
core/src/utils/: expiring_hash.rs
(+21 files in other folders)
