[package]
name = "dandelion"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Zhuhao Wang <zhuhaow@gmail.com>"]

[dependencies]
tokio = { version = "1.43.0", features = ["io-util", "net", "macros", "rt"] }
async-trait = "0.1.87"
tokio-tungstenite = "0.26.2"
futures = "0.3.31"
http = "1.2.0"
pin-project = "1.1.10"
chrono = "0.4.40"
hyper-tungstenite = "0.17.0"
hyper = { version = "1.6.0", features = ["http1", "server", "client"] }
bytes = "1.10.0"
tungstenite = "0.26.2"
serde = { version = "1.0.218", features = ["derive"] }
anyhow = { version = "1.0.97", features = ["backtrace"] }
tokio-native-tls = "0.3.1"
lazy_static = "1.5.0"
tempfile = "3.17.1"
dns-lookup = "2.0.4"
itertools = "0.14.0"
libc = "0.2.170"
rand = "0.9.0"
scopeguard = "1.2.0"
hickory-proto = "0.24.4"
tokio-util = { version = "0.7.13", features = ["codec"] }
byteorder = "1.5.0"
cfg-if = "1.0.0"
tracing = { version = "0.1.41", features = ["log"] }
socket2 = { version = "0.5.8", features = ["all"] }
rustc-hash = "2.1.1"
hickory-resolver = "0.24.4"
quinn = { version = "0.11.6", features = ["ring", "runtime-tokio", "platform-verifier"] }
rustls = "0.23.23"
httparse = "1.10.1"
auto_impl = "1.2.1"
http-body-util = "0.1.2"
hyper-util = { version = "0.1.10" }
rustls-platform-verifier = "0.5.0"
rune = "0.13.4"
ipnetwork = "0.21.1"
flate2 = "1.1.0"
maxminddb = { version = "0.25.0", features = ["mmap"] }
tar = "0.4.44"
reqwest = { version = "0.12.12" }
log = "0.4.26"
structopt = "0.3.26"
flexi_logger = "0.29.8"
fdlimit = "0.3.0"

[dev-dependencies]
env_logger = "0.11.6"
rstest = "0.25.0"
test-log = "0.2.17"
