[package]
name = "dandelion"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Zhuhao Wang <zhuhaow@gmail.com>"]

[dependencies]
tokio = { version = "1.45.1", features = ["io-util", "net", "macros", "rt"] }
async-trait = "0.1.88"
tokio-tungstenite = "0.27.0"
futures = "0.3.31"
http = "1.3.1"
pin-project = "1.1.10"
chrono = "0.4.41"
hyper-tungstenite = "0.18.0"
hyper = { version = "1.6.0", features = ["http1", "server", "client"] }
bytes = "1.10.1"
tungstenite = "0.27.0"
serde = { version = "1.0.219", features = ["derive"] }
anyhow = { version = "1.0.98", features = ["backtrace"] }
tokio-native-tls = "0.3.1"
lazy_static = "1.5.0"
tempfile = "3.20.0"
dns-lookup = "2.0.4"
itertools = "0.14.0"
libc = "0.2.174"
rand = "0.9.1"
scopeguard = "1.2.0"
hickory-proto = "0.25.2"
tokio-util = { version = "0.7.15", features = ["codec"] }
byteorder = "1.5.0"
cfg-if = "1.0.1"
tracing = { version = "0.1.41", features = ["log"] }
socket2 = { version = "0.5.10", features = ["all"] }
rustc-hash = "2.1.1"
hickory-resolver = "0.25.2"
quinn = { version = "0.11.8", features = ["ring", "runtime-tokio", "platform-verifier"] }
rustls = "0.23.28"
httparse = "1.10.1"
auto_impl = "1.3.0"
http-body-util = "0.1.3"
hyper-util = { version = "0.1.14" }
rustls-platform-verifier = "0.6.0"
rune = "0.14.0"
ipnetwork = "0.21.1"
flate2 = "1.1.2"
maxminddb = { version = "0.26.0", features = ["mmap"] }
tar = "0.4.44"
reqwest = { version = "0.12.20" }
log = "0.4.27"
structopt = "0.3.26"
flexi_logger = "0.31.1"
fdlimit = "0.3.0"
cached = "0.55.1"
sha2 = "0.10.9"

[dev-dependencies]
env_logger = "0.11.8"
rstest = "0.25.0"
test-log = "0.2.17"
