[package]
name = "dandelion"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Zhuhao Wang <zhuhaow@gmail.com>"]

[dependencies]
tokio = { version = "1.50.0", features = ["io-util", "net", "macros", "rt"] }
async-trait = "0.1.89"
tokio-tungstenite = "0.29.0"
futures = "0.3.32"
http = "1.4.0"
pin-project = "1.1.11"
chrono = "0.4.44"
hyper-tungstenite = "0.19.0"
hyper = { version = "1.8.1", features = ["http1", "server", "client"] }
bytes = "1.11.1"
tungstenite = "0.29.0"
serde = { version = "1.0.228", features = ["derive"] }
anyhow = { version = "1.0.102", features = ["backtrace"] }
tokio-native-tls = "0.3.1"
lazy_static = "1.5.0"
tempfile = "3.27.0"
dns-lookup = "3.0.1"
itertools = "0.14.0"
libc = "0.2.183"
scopeguard = "1.2.0"
hickory-proto = "0.25.2"
tokio-util = { version = "0.7.18", features = ["codec"] }
byteorder = "1.5.0"
cfg-if = "1.0.4"
tracing = { version = "0.1.44", features = ["log"] }
socket2 = { version = "0.6.3", features = ["all"] }
rustc-hash = "2.1.1"
hickory-resolver = "0.25.2"
quinn = { version = "0.11.9", features = ["ring", "runtime-tokio", "platform-verifier"] }
rustls = "0.23.37"
httparse = "1.10.1"
auto_impl = "1.3.0"
http-body-util = "0.1.3"
hyper-util = { version = "0.1.20" }
rustls-platform-verifier = "0.6.2"
rune = "0.14.1"
ipnetwork = "0.21.1"
flate2 = "1.1.9"
maxminddb = { version = "0.27.3", features = ["mmap"] }
tar = "0.4.45"
reqwest = { version = "0.13.2" }
log = "0.4.29"
structopt = "0.3.26"
flexi_logger = "0.31.8"
fdlimit = "0.3.0"
sha2 = "0.10.9"
tun = "0.8.6"
lru = "0.16.3"

[dev-dependencies]
env_logger = "0.11.10"
rstest = "0.26.1"
test-log = "0.2.19"
