[package]
name = "dandelion-cli"
version = "0.0.1"
edition = "2021"
license = "MIT"

[dependencies]
dandelion-core = { path = "../dandelion-core" }
dandelion-config = { path = "../dandelion-config" }
tokio = { version = "1.35.0", features = ["io-util", "net"] }
async-trait = "0.1.74"
structopt = "0.3.26"
futures = "0.3.29"
flexi_logger = "0.27.3"
anyhow = { version = "1.0.81", features = ["backtrace"] }
fdlimit = "0.3.0"
ipnetwork = "0.20.0"
maxminddb = { version = "0.23.0", features = ["mmap"] }
iso3166-1 = "1.0.1"
async-recursion = "1.0.5"
tokio-stream = { version = "0.1.14", features = ["net"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-futures = "0.2.5"
rand = "0.8.5"
trust-dns-resolver = "0.23.2"

[dev-dependencies]
rstest = "0.18.2"
