[package]
name = "dandelion-cli"
version = "0.0.1"
edition = "2021"
license = "MIT"

[dependencies]
dandelion-core = { path = "../dandelion-core" }
dandelion-config = { path = "../dandelion-config" }
tokio = { version = "1.40.0", features = ["io-util", "net"] }
async-trait = "0.1.83"
structopt = "0.3.26"
futures = "0.3.31"
flexi_logger = "0.29.2"
anyhow = { version = "1.0.89", features = ["backtrace"] }
fdlimit = "0.3.0"
ipnetwork = "0.20.0"
maxminddb = { version = "0.24.0", features = ["mmap"] }
tracing = { version = "0.1.40", features = ["log"] }
rand = "0.8.5"
rune = { version = "0.13.4", features = ["cli"] }
rustls = "0.23.14"

[dev-dependencies]
rstest = "0.23.0"
