[package]
name = "dandelion-config"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
serde = "1.0.200"
dandelion-core = { path = "../dandelion-core" }
futures = "0.3.30"
tokio-stream = { version = "0.1.15", features = ["net"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-futures = "0.2.5"
tokio = { version = "1.37.0", features = ["rt", "macros"] }
rand = "0.8.5"
rune = "0.13.2"
anyhow = { version = "1.0.82", features = ["backtrace"] }
hickory-resolver = "0.24.1"
ipnetwork = "0.20.0"
flate2 = "1.0.30"
maxminddb = "0.24.0"
tar = "0.4.40"
reqwest = { version = "0.12.4" }
tempfile = "3.10.1"

[dev-dependencies]
rstest = "0.19.0"
test-log = "0.2.16"
env_logger = "0.11.3"
