[package]
name = "dandelion-config"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
serde = "1.0.210"
dandelion-core = { path = "../dandelion-core" }
futures = "0.3.31"
tracing = { version = "0.1.40", features = ["log"] }
tokio = { version = "1.40.0", features = ["rt", "macros"] }
rand = "0.8.5"
rune = "0.13.4"
anyhow = { version = "1.0.89", features = ["backtrace"] }
hickory-resolver = "0.24.1"
ipnetwork = "0.20.0"
flate2 = "1.0.34"
maxminddb = "0.24.0"
tar = "0.4.42"
reqwest = { version = "0.12.8" }
tempfile = "3.13.0"
log = "0.4.22"

[dev-dependencies]
rstest = "0.23.0"
test-log = "0.2.16"
env_logger = "0.11.5"
