[package]
name = "dandelion-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1.40.0", features = ["io-util", "net", "macros", "rt"] }
async-trait = "0.1.80"
tokio-tungstenite = "0.21.0"
futures = "0.3.30"
async-compat = "0.2.3"
http = "1.1.0"
pin-project = "1.1.5"
chrono = "0.4.38"
hyper-tungstenite = "0.13.0"
hyper = { version = "1.4.1", features = ["http1", "server", "client"] }
bytes = "1.6.0"
tungstenite = "0.21.0"
serde = { version = "1.0.200", features = ["derive"] }
anyhow = { version = "1.0.82", features = ["backtrace"] }
tokio-native-tls = "0.3.1"
lazy_static = "1.4.0"
regex = "1.10.4"
ipnetwork = "0.20.0"
maxminddb = { version = "0.24.0", features = ["mmap"] }
iso3166-1 = "1.0.1"
flate2 = "1.0.30"
tar = "0.4.40"
reqwest = "0.12.5"
serde_regex = "1.1.0"
tempfile = "3.10.1"
dns-lookup = "2.0.4"
itertools = "0.12.1"
libc = "0.2.154"
os_socketaddr = "0.2.5"
nix = "0.28.0"
rand = "0.8.5"
scopeguard = "1.2.0"
hickory-proto = "0.24.1"
tokio-util = { version = "0.7.10", features = ["codec"] }
pnet_packet = "0.34.0"
as-dyn-trait = "0.2.0"
byteorder = "1.5.0"
async-stream = "0.3.5"
cfg-if = "1.0.0"
tracing = { version = "0.1.40", features = ["log"] }
socket2 = { version = "0.5.7", features = ["all"] }
multi-map = "1.3.0"
lru = "0.12.3"
rustc-hash = "1.1.0"
hickory-resolver = "0.24.1"
quinn = "0.10.2"
rustls = "0.23.5"
httparse = "1.8.0"
auto_impl = "1.2.0"
http-body-util = "0.1.1"
hyper-util = { version = "0.1.3" }

[dev-dependencies]
env_logger = "0.11.3"
rstest = "0.19.0"
test-log = "0.2.16"

[target.'cfg(unix)'.dependencies]
tun = { version = "0.6.1", features = ["async"] }
