[package]
name = "dandelion-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1.40.0", features = ["io-util", "net", "macros", "rt"] }
async-trait = "0.1.83"
tokio-tungstenite = "0.24.0"
futures = "0.3.31"
async-compat = "0.2.4"
http = "1.1.0"
pin-project = "1.1.6"
chrono = "0.4.38"
hyper-tungstenite = "0.15.0"
hyper = { version = "1.4.1", features = ["http1", "server", "client"] }
bytes = "1.7.2"
tungstenite = "0.24.0"
serde = { version = "1.0.210", features = ["derive"] }
anyhow = { version = "1.0.89", features = ["backtrace"] }
tokio-native-tls = "0.3.1"
lazy_static = "1.5.0"
regex = "1.11.0"
ipnetwork = "0.20.0"
maxminddb = { version = "0.24.0", features = ["mmap"] }
iso3166-1 = "1.0.1"
flate2 = "1.0.34"
tar = "0.4.42"
reqwest = "0.12.8"
serde_regex = "1.1.0"
tempfile = "3.13.0"
dns-lookup = "2.0.4"
itertools = "0.13.0"
libc = "0.2.159"
os_socketaddr = "0.2.5"
nix = "0.29.0"
rand = "0.8.5"
scopeguard = "1.2.0"
hickory-proto = "0.24.1"
tokio-util = { version = "0.7.12", features = ["codec"] }
pnet_packet = "0.35.0"
as-dyn-trait = "0.2.0"
byteorder = "1.5.0"
async-stream = "0.3.6"
cfg-if = "1.0.0"
tracing = { version = "0.1.40", features = ["log"] }
socket2 = { version = "0.5.7", features = ["all"] }
multi-map = "1.3.0"
lru = "0.12.5"
rustc-hash = "2.0.0"
hickory-resolver = "0.24.1"
quinn = { version = "0.11.5", features = ["ring", "runtime-tokio"] }
rustls = "0.23.14"
httparse = "1.9.5"
auto_impl = "1.2.0"
http-body-util = "0.1.2"
hyper-util = { version = "0.1.9" }
rustls-platform-verifier = "0.3.4"

[dev-dependencies]
env_logger = "0.11.5"
rstest = "0.23.0"
test-log = "0.2.16"

[target.'cfg(unix)'.dependencies]
tun = { version = "0.6.1", features = ["async"] }
