[package]
name = "specht-cli"
version = "0.0.1"
edition = "2021"
license = "MIT"

[dependencies]
specht-core = { path = "../specht-core" }
specht-config = { path = "../specht-config" }
tokio = { version = "1.17.0", features = ["io-util", "net"] }
async-trait = "0.1.57"
structopt = "0.3.26"
futures = "0.3.23"
flexi_logger = "0.25.5"
anyhow = { version = "1.0.62", features = ["backtrace"] }
fdlimit = "0.2.1"
ipnetwork = "0.20.0"
maxminddb = { version = "0.23.0", features = ["mmap"] }
iso3166-1 = "1.0.1"
async-recursion = "1.0.0"
tokio-stream = { version = "0.1.9", features = ["net"] }
tracing = { version = "0.1.36", features = ["log"] }
tracing-futures = "0.2.5"
rand = "0.8.5"
trust-dns-resolver = "0.22.0"

[dev-dependencies]
rstest = "0.17.0"
