[package]
name = "specht-config"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
serde = "1.0.164"
specht-core = { path = "../specht-core" }
futures = "0.3.28"
tokio-stream = { version = "0.1.14", features = ["net"] }
tracing = { version = "0.1.37", features = ["log"] }
tracing-futures = "0.2.5"
tokio = { version = "1.28.2", features = ["rt", "macros"] }
rand = "0.8.5"
rune = "0.12.4"
anyhow = "1.0.71"

[dev-dependencies]
rstest = "0.17.0"
