[package]
name = "specht-core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1.15.0", features = ["io-util", "net", "macros", "rt", "rt-multi-thread"] }
async-trait = "0.1.52"
tokio-tungstenite = "0.16.1"
futures = "0.3.19"
async-compat = "0.2.1"
http = "0.2.5"
pin-project = "1.0.8"
chrono = "0.4.19"
hyper-tungstenite = "0.5.0"
hyper = { version = "0.14.16", features = ["http1", "server"] }
bytes = "1.1.0"
tungstenite = "0.16.0"
serde = { version = "1.0.132", features = ["derive"] }
anyhow = { version = "1.0.52", features = ["backtrace"] }
tokio-native-tls = "0.3.0"
lazy_static = "1.4.0"
regex = "1.5.4"
ipnetwork = "0.18.0"
maxminddb = { version = "0.21.0", features = ["mmap"] }
iso3166-1 = "1.0.1"
flate2 = "1.0.22"
tar = "0.4.38"
reqwest = "0.11.8"
# Make sure it's compatible with maxminddb
memmap2 = "0.3.1"
serde_regex = "1.1.0"
tempfile = "3.2.0"
tower = { version = "0.4.11", features = ["util"] }
dns-lookup = "1.0.8"
itertools = "0.10.3"
libc = "0.2.121"
os_socketaddr = "0.2.0"
nix = "0.23.1"
rand = "0.8.4"
scopeguard = "1.1.0"
trust-dns-proto = "0.20.3"
tokio-util = { version = "0.6.9", features = ["codec"] }
pnet_packet = "0.29.0"
as-dyn-trait = "0.2.0"
byteorder = "1.4.3"
async-stream = "0.3.2"
cfg-if = "1.0.0"
tracing = { version = "0.1.29", features = ["log"] }
socket2 = { version = "0.4.4", features = ["all"] }
multi-map = "1.3.0"
lru = "0.7.2"
rustc-hash = "1.1.0"
trust-dns-resolver = "0.20.4"

[dev-dependencies]
env_logger = "0.9.0"
rstest = "0.12.0"
test-log = "0.2.8"

[target.'cfg(unix)'.dependencies]
tun = { version = "0.5", features = ["async"] }
