[package]
name = "specht-ffi"
version = "0.0.1"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
specht-core = { path = "../specht-core" }
specht-server = { path = "../specht-server" }
tokio = { version = "1.17.0", features = ["rt", "rt-multi-thread"] }
async-trait = "0.1.52"
futures = "0.3.21"
ron = "0.7.0"
log = "0.4.17"
flexi_logger = "0.23.0"
anyhow = { version = "1.0.56", features = ["backtrace"] }
fdlimit = "0.2.1"
ipnetwork = "0.18.0"
libc = "0.2.131"
rich-phantoms = "0.1.0"
ffi_helpers = "0.3.0"
