[package]
name = "specht-ffi"
version = "0.0.1"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["lib", "staticlib"]

[dependencies]
specht-core = { path = "../specht-core" }
specht-server = { path = "../specht-server" }
tokio = { version = "1.24.2", features = ["rt", "rt-multi-thread"] }
async-trait = "0.1.58"
futures = "0.3.25"
ron = "0.8.0"
log = "0.4.17"
flexi_logger = "0.24.0"
anyhow = { version = "1.0.66", features = ["backtrace"] }
fdlimit = "0.2.1"
ipnetwork = "0.20.0"
libc = "0.2.135"
rich-phantoms = "0.1.0"
ffi_helpers = "0.3.0"
