[package]
name = "specht-server"
version = "0.0.1"
edition = "2021"
license = "MIT"

[dependencies]
specht-core = { path = "../specht-core" }
tokio = { version = "1.15.0", features = ["io-util", "net"] }
async-trait = "0.1.52"
structopt = "0.3.25"
futures = "0.3.19"
ron = "0.7.0"
serde = { version = "1.0.132", features = ["derive"] }
serde_with = "1.11.0"
flexi_logger = "0.22.0"
anyhow = { version = "1.0.52", features = ["backtrace"] }
fdlimit = "0.2.1"
ipnetwork = "0.18.0"
maxminddb = { version = "0.21.0", features = ["mmap"] }
iso3166-1 = "1.0.1"
# Make sure it's compatible with maxminddb
memmap2 = "0.3.1"
async-recursion = "1.0.0"
tokio-stream = { version = "0.1.8", features = ["net"] }
tracing = { version = "0.1.31", features = ["log"] }
tracing-futures = "0.2.5"
rand = "0.8.4"
trust-dns-resolver = "0.20.4"

[dev-dependencies]
rstest = "0.12.0"
