[package]
name = "specht-server"
version = "0.0.1"
edition = "2021"
license = "MIT"

[dependencies]
specht-core = { path = "../specht-core" }
tokio = { version = "1.17.0", features = ["io-util", "net"] }
async-trait = "0.1.52"
structopt = "0.3.26"
futures = "0.3.21"
ron = "0.7.0"
serde = { version = "1.0.143", features = ["derive"] }
serde_with = "1.12.0"
flexi_logger = "0.22.3"
anyhow = { version = "1.0.56", features = ["backtrace"] }
fdlimit = "0.2.1"
ipnetwork = "0.18.0"
maxminddb = { version = "0.21.0", features = ["mmap"] }
iso3166-1 = "1.0.1"
# Make sure it's compatible with maxminddb
memmap2 = "0.5.7"
async-recursion = "1.0.0"
tokio-stream = { version = "0.1.8", features = ["net"] }
tracing = { version = "0.1.32", features = ["log"] }
tracing-futures = "0.2.5"
rand = "0.8.5"
trust-dns-resolver = "0.21.1"

[dev-dependencies]
rstest = "0.12.0"
